apps/cli/src/tui/snapshots/discovered_prompt_80x24_en.snap
---
source: apps/cli/src/tui/view.rs
expression: snap
---
 shop · ✔ live · engine observing · acting as you                    ⚡ –  ⛔ –
┏━ › Fleet · ↑↓ vs main (local copy, fetch age not available) ━━━━━━━━━━━━━━━━━┓
┃     Agent                  Branch            Files ↑↓          Activity      ┃
┃  ○  No agent · shop        main              ~0    ↑0 ↓0       not available ┃
┃  ●  claude-1 · feat-pagos  feat-pagos        ~2    ↑3 ↓1       not available ┃
┃  ○  No agent · feat-docs   feat-docs         ~0    ↑1 ↓0       not available ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┏━ › ℹ  Discovered repo ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ In your code folder /code                                                    ┃
┃                                                                              ┃
┃ notes  /code/notes                                                           ┃
┃                                                                              ┃
┃ Observe notes?                                                               ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 r retry  y observe  n no  Esc later                                     q quit
=== styles ===
0:0-0 bg=#3a3a3a
0:1-4 bg=#3a3a3a BOLD
0:5-7 fg=#949494 bg=#3a3a3a
0:8-8 fg=#3fb950 bg=#3a3a3a
0:9-9 bg=#3a3a3a
0:10-32 fg=#3fb950 bg=#3a3a3a
0:33-35 fg=#949494 bg=#3a3a3a
0:36-68 bg=#3a3a3a
0:69-69 fg=#d29922 bg=#3a3a3a
0:71-71 bg=#3a3a3a
0:72-72 fg=#d29922 bg=#3a3a3a BOLD
0:73-74 bg=#3a3a3a
0:75-75 fg=#f85149 bg=#3a3a3a
0:77-77 bg=#3a3a3a
0:78-78 fg=#f85149 bg=#3a3a3a BOLD
0:79-79 bg=#3a3a3a
1:0-4 fg=#ffe066
1:5-60 fg=#ffe066 BOLD
1:61-79 fg=#ffe066
2:0-0 fg=#ffe066
2:6-10 fg=#949494 BOLD
2:29-34 fg=#949494 BOLD
2:47-51 fg=#949494 BOLD
2:53-54 fg=#949494 BOLD
2:65-72 fg=#949494 BOLD
2:79-79 fg=#ffe066
3:0-0 fg=#ffe066
3:3-3 fg=#949494
3:6-20 fg=#949494
3:29-32 fg=#949494
3:47-48 fg=#949494
3:53-57 fg=#949494
3:65-77 fg=#949494
3:79-79 fg=#ffe066
4:0-0 fg=#ffe066
4:3-3 fg=#3fb950
4:6-26 fg=#e69f00 BOLD
4:47-48 fg=#d29922
4:65-77 fg=#949494
4:79-79 fg=#ffe066
5:0-0 fg=#ffe066
5:3-3 fg=#949494
5:6-25 fg=#949494
5:29-37 fg=#949494
5:47-48 fg=#949494
5:53-57 fg=#949494
5:65-77 fg=#949494
5:79-79 fg=#ffe066
6:0-0 fg=#ffe066
6:79-79 fg=#ffe066
7:0-0 fg=#ffe066
7:79-79 fg=#ffe066
8:0-0 fg=#ffe066
8:79-79 fg=#ffe066
9:0-0 fg=#ffe066
9:79-79 fg=#ffe066
10:0-0 fg=#ffe066
10:79-79 fg=#ffe066
11:0-0 fg=#ffe066
11:79-79 fg=#ffe066
12:0-0 fg=#ffe066
12:79-79 fg=#ffe066
13:0-0 fg=#ffe066
13:79-79 fg=#ffe066
14:0-0 fg=#ffe066
14:79-79 fg=#ffe066
15:0-79 fg=#ffe066
16:0-7 fg=#ffe066
16:8-22 fg=#ffe066 BOLD
16:23-79 fg=#ffe066
17:0-0 fg=#ffe066
17:2-26 fg=#949494
17:79-79 fg=#ffe066
18:0-0 fg=#ffe066
18:79-79 fg=#ffe066
19:0-0 fg=#ffe066
19:2-6 BOLD
19:9-19 fg=#949494
19:79-79 fg=#ffe066
20:0-0 fg=#ffe066
20:79-79 fg=#ffe066
21:0-0 fg=#ffe066
21:2-15 BOLD
21:79-79 fg=#ffe066
22:0-79 fg=#ffe066
23:1-1 fg=#2dc2ad BOLD
23:10-10 fg=#2dc2ad BOLD
23:21-21 fg=#2dc2ad BOLD
23:27-29 fg=#2dc2ad BOLD
23:73-73 fg=#2dc2ad BOLD
