apps/cli/src/tui/snapshots/fleet_120x40_light.snap
---
source: apps/cli/src/tui/view.rs
expression: snap
---
 shop · ✔ live · engine observing · acting as you                                                            ⚡ –  ⛔ –
┏━ › Fleet · ↑↓ vs main (local copy, fetched 3 h ago) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃     Agent                     Branch                                                 Files ↑↓          Activity      ┃
┃     Unattributed (you/other)  main                                                   ~0    ↑0 ↓0       not available ┃
┃  ●  claude-1 · feat-pagos     feat-pagos                                             ~2    ↑3 ↓1       2 min ago     ┃
┃     Unattributed (you/other)  feat-docs                                              ~0    ↑1 ↓0       not available ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┃                                                                                                                      ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 r retry                                                                                                         q quit
=== styles (light) ===
0:0-0 bg=#f0f0f0
0:1-4 bg=#f0f0f0 BOLD
0:5-7 fg=#6b6b6b bg=#f0f0f0
0:8-8 fg=#1a7f37 bg=#f0f0f0
0:9-9 bg=#f0f0f0
0:10-32 fg=#1a7f37 bg=#f0f0f0
0:33-35 fg=#6b6b6b bg=#f0f0f0
0:36-108 bg=#f0f0f0
0:109-109 fg=#9a6700 bg=#f0f0f0
0:111-111 bg=#f0f0f0
0:112-112 fg=#9a6700 bg=#f0f0f0 BOLD
0:113-114 bg=#f0f0f0
0:115-115 fg=#cf222e bg=#f0f0f0
0:117-117 bg=#f0f0f0
0:118-118 fg=#cf222e bg=#f0f0f0 BOLD
0:119-119 bg=#f0f0f0
1:0-4 fg=#8a5a00
1:5-52 fg=#8a5a00 BOLD
1:53-119 fg=#8a5a00
2:0-0 fg=#8a5a00
2:6-10 fg=#6b6b6b BOLD
2:32-37 fg=#6b6b6b BOLD
2:87-91 fg=#6b6b6b BOLD
2:93-94 fg=#6b6b6b BOLD
2:105-112 fg=#6b6b6b BOLD
2:119-119 fg=#8a5a00
3:0-0 fg=#8a5a00
3:6-29 fg=#6b6b6b
3:87-88 fg=#6b6b6b
3:105-117 fg=#6b6b6b
3:119-119 fg=#8a5a00
4:0-0 fg=#8a5a00
4:3-3 fg=#1a7f37
4:6-26 fg=#a35f00 BOLD
4:87-88 fg=#9a6700
4:105-113 fg=#6b6b6b
4:119-119 fg=#8a5a00
5:0-0 fg=#8a5a00
5:6-29 fg=#6b6b6b
5:87-88 fg=#6b6b6b
5:105-117 fg=#6b6b6b
5:119-119 fg=#8a5a00
6:0-0 fg=#8a5a00
6:119-119 fg=#8a5a00
7:0-0 fg=#8a5a00
7:119-119 fg=#8a5a00
8:0-0 fg=#8a5a00
8:119-119 fg=#8a5a00
9:0-0 fg=#8a5a00
9:119-119 fg=#8a5a00
10:0-0 fg=#8a5a00
10:119-119 fg=#8a5a00
11:0-0 fg=#8a5a00
11:119-119 fg=#8a5a00
12:0-0 fg=#8a5a00
12:119-119 fg=#8a5a00
13:0-0 fg=#8a5a00
13:119-119 fg=#8a5a00
14:0-0 fg=#8a5a00
14:119-119 fg=#8a5a00
15:0-0 fg=#8a5a00
15:119-119 fg=#8a5a00
16:0-0 fg=#8a5a00
16:119-119 fg=#8a5a00
17:0-0 fg=#8a5a00
17:119-119 fg=#8a5a00
18:0-0 fg=#8a5a00
18:119-119 fg=#8a5a00
19:0-0 fg=#8a5a00
19:119-119 fg=#8a5a00
20:0-0 fg=#8a5a00
20:119-119 fg=#8a5a00
21:0-0 fg=#8a5a00
21:119-119 fg=#8a5a00
22:0-0 fg=#8a5a00
22:119-119 fg=#8a5a00
23:0-0 fg=#8a5a00
23:119-119 fg=#8a5a00
24:0-0 fg=#8a5a00
24:119-119 fg=#8a5a00
25:0-0 fg=#8a5a00
25:119-119 fg=#8a5a00
26:0-0 fg=#8a5a00
26:119-119 fg=#8a5a00
27:0-0 fg=#8a5a00
27:119-119 fg=#8a5a00
28:0-0 fg=#8a5a00
28:119-119 fg=#8a5a00
29:0-0 fg=#8a5a00
29:119-119 fg=#8a5a00
30:0-0 fg=#8a5a00
30:119-119 fg=#8a5a00
31:0-0 fg=#8a5a00
31:119-119 fg=#8a5a00
32:0-0 fg=#8a5a00
32:119-119 fg=#8a5a00
33:0-0 fg=#8a5a00
33:119-119 fg=#8a5a00
34:0-0 fg=#8a5a00
34:119-119 fg=#8a5a00
35:0-0 fg=#8a5a00
35:119-119 fg=#8a5a00
36:0-0 fg=#8a5a00
36:119-119 fg=#8a5a00
37:0-0 fg=#8a5a00
37:119-119 fg=#8a5a00
38:0-119 fg=#8a5a00
39:1-1 fg=#0f7d70 BOLD
39:113-113 fg=#0f7d70 BOLD
