apps/cli/src/tui/snapshots/fleet_80x24_light.snap
---
source: apps/cli/src/tui/view.rs
expression: snap
---
 shop · ✔ live · engine observing · acting as you                    ⚡ –  ⛔ –
┏━ › Fleet · ↑↓ vs main (local copy, fetched 3 h ago) ━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃     Agent                  Branch               Files ↑↓          Activity   ┃
┃  ○  No agent · shop        main                 ~0    ↑0 ↓0       –          ┃
┃  ●  claude-1 · feat-pagos  feat-pagos           ~2    ↑3 ↓1       2 min ago  ┃
┃  ○  No agent · feat-docs   feat-docs            ~0    ↑1 ↓0       –          ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 r retry   ○ no agent: changes by you or another tool                    q quit
=== styles (light) ===
0:0-0 bg=#f0f0f0
0:1-4 bg=#f0f0f0 BOLD
0:5-7 fg=#6b6b6b bg=#f0f0f0
0:8-8 fg=#1a7f37 bg=#f0f0f0
0:9-9 bg=#f0f0f0
0:10-32 fg=#1a7f37 bg=#f0f0f0
0:33-35 fg=#6b6b6b bg=#f0f0f0
0:36-68 bg=#f0f0f0
0:69-69 fg=#9a6700 bg=#f0f0f0
0:71-71 bg=#f0f0f0
0:72-72 fg=#9a6700 bg=#f0f0f0 BOLD
0:73-74 bg=#f0f0f0
0:75-75 fg=#cf222e bg=#f0f0f0
0:77-77 bg=#f0f0f0
0:78-78 fg=#cf222e bg=#f0f0f0 BOLD
0:79-79 bg=#f0f0f0
1:0-4 fg=#8a5a00
1:5-52 fg=#8a5a00 BOLD
1:53-79 fg=#8a5a00
2:0-0 fg=#8a5a00
2:6-10 fg=#6b6b6b BOLD
2:29-34 fg=#6b6b6b BOLD
2:50-54 fg=#6b6b6b BOLD
2:56-57 fg=#6b6b6b BOLD
2:68-75 fg=#6b6b6b BOLD
2:79-79 fg=#8a5a00
3:0-0 fg=#8a5a00
3:3-3 fg=#6b6b6b
3:6-20 fg=#6b6b6b
3:29-32 fg=#6b6b6b
3:50-51 fg=#6b6b6b
3:56-60 fg=#6b6b6b
3:68-68 fg=#6b6b6b
3:79-79 fg=#8a5a00
4:0-0 fg=#8a5a00
4:3-3 fg=#1a7f37
4:6-26 fg=#a35f00 BOLD
4:50-51 fg=#9a6700
4:68-76 fg=#6b6b6b
4:79-79 fg=#8a5a00
5:0-0 fg=#8a5a00
5:3-3 fg=#6b6b6b
5:6-25 fg=#6b6b6b
5:29-37 fg=#6b6b6b
5:50-51 fg=#6b6b6b
5:56-60 fg=#6b6b6b
5:68-68 fg=#6b6b6b
5:79-79 fg=#8a5a00
6:0-0 fg=#8a5a00
6:79-79 fg=#8a5a00
7:0-0 fg=#8a5a00
7:79-79 fg=#8a5a00
8:0-0 fg=#8a5a00
8:79-79 fg=#8a5a00
9:0-0 fg=#8a5a00
9:79-79 fg=#8a5a00
10:0-0 fg=#8a5a00
10:79-79 fg=#8a5a00
11:0-0 fg=#8a5a00
11:79-79 fg=#8a5a00
12:0-0 fg=#8a5a00
12:79-79 fg=#8a5a00
13:0-0 fg=#8a5a00
13:79-79 fg=#8a5a00
14:0-0 fg=#8a5a00
14:79-79 fg=#8a5a00
15:0-0 fg=#8a5a00
15:79-79 fg=#8a5a00
16:0-0 fg=#8a5a00
16:79-79 fg=#8a5a00
17:0-0 fg=#8a5a00
17:79-79 fg=#8a5a00
18:0-0 fg=#8a5a00
18:79-79 fg=#8a5a00
19:0-0 fg=#8a5a00
19:79-79 fg=#8a5a00
20:0-0 fg=#8a5a00
20:79-79 fg=#8a5a00
21:0-0 fg=#8a5a00
21:79-79 fg=#8a5a00
22:0-79 fg=#8a5a00
23:1-1 fg=#0f7d70 BOLD
23:11-11 fg=#6b6b6b
23:13-52 fg=#6b6b6b
23:73-73 fg=#0f7d70 BOLD
